# react-native-bitnet

./: .gitignore  Bitnet.podspec  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  native-build.md  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: codegen-fanout-checker.md  doc-sync-auditor.md  error-symmetry-auditor.md  ios-port-engineer.md  native-bridge-engineer.md  release-prepper.md  sdk-api-reviewer.md  sdk-architect.md  streaming-lifecycle-reviewer.md
.claude/hooks/: block-npm-pnpm.sh  enforce-commit-identity.sh  engine-changed-reminder.sh  facade-changed-reminder.sh  guard-arm64-abi.sh  guard-jniexport.sh  guard-newstringutf.sh  guard-visibility.sh  kotlin-changed-reminder.sh  nudge-api-doc-update.sh  nudge-fanout-completion.sh  nudge-lint.sh  nudge-typecheck.sh  nudge-verify-streaming.sh  spec-changed-reminder.sh
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: bitnet_engine.cpp  bitnet_engine.h  bitnet_jni.cpp
android/src/main/java/com/bitnet/: BitnetDownloadService.kt  BitnetModule.kt  BitnetPackage.kt  ModelCache.kt  ModelDownloader.kt
docs/: architecture.md  known-issues.md  native-build.md  sequence-model-lifecycle.md  sequence-streaming.md
docs/adr/: 001-arm64-only.md  002-engine-design.md  003-streaming-api.md
docs/api/: README.md  chat-completions.md  engine.md  errors.md  events.md  models.md  streaming.md  types.md
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: Podfile
example/src/: App.tsx  (+1 more)
ios/: Bitnet.h  Bitnet.mm  BitnetCache.h  BitnetCache.mm  BitnetDownloader.h  BitnetDownloader.mm
src/: NativeBitnet.ts  index.tsx  models.ts  multiply.native.tsx  multiply.tsx  sha256.ts
(+17 files in other folders)
